--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
       "react-app/jest"
     ]
   },
@@ -44,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^3.2.3"
   }
 }
