--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.3",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-calendar": "^3.6.0",
