--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.3",
+    "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
